19/10/2024 expand the capabilities

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,12 +6,21 @@ jira.apiToken=
 # Project details
 project.key=TEST
 issuetype=Bug
-summary=Bug Summary
+# Can be updated based on your needs (e.g., Bug, Task, Query)
+summary=This is a example summary
 
 # Ticket priority
-priority=High
+priority=Medium
 # Can be updated based on your needs (e.g., Low, Medium, High, Critical)
 
-# Other optional fields (add as needed)
- custom.labels=EX-CR-ITD,test
-#custom.component=Backend                   # Example custom component field
+# Custom fields for Bug ticket types
+Bug.summarytag=[EX-CR-ITD-BUG]
+custom.Bug.labels=EX-CR-ITD
+
+# Custom fields for Bug ticket types
+Task.summarytag=[EX-CR-ITD-Task]
+custom.Task.labels=EX-CR-ITD2
+
+# Custom fields for Bug ticket types
+Query.summarytag=[EX-CR-ITD-Query]
+custom.Query.labels=EX-CR-ITD3
