--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,7 +7,7 @@ jira.personalAccessToken=
 # Project details
 project.key=TEST
 # Can be updated based on your needs (e.g., Bug, Task, Query)
-issuetype=Bug
+issuetype=Task
 summary=This is a example summary
 
 # Ticket priority
@@ -19,8 +19,11 @@ Bug.summarytag=[EX-CR-ITD-BUG]
 custom.Bug.labels=EX-CR-ITD
 
 # Custom fields for Bug ticket types
-Task.summarytag=[EX-CR-ITD-Task]
-custom.Task.labels=EX-CR-ITD2
+Task.summarytag=[E2E][STD25]
+custom.Task.labels=EX-CR-ITD
+#custom.Task.TaskType=Test
+#custom.Task.TestingResponsibility=Quality Assurer
+#custom.Task.ScrumTeam=Krypton
 
 # Custom fields for Bug ticket types
 Query.summarytag=[EX-CR-ITD-Query]
