24/10/2024 sub task creation

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -25,6 +25,9 @@ custom.Task.labels=EX-CR-ITD
 #custom.Task.TestingResponsibility=Quality Assurer
 #custom.Task.ScrumTeam=Krypton
 
+# Sub-task names for Task
+subtasks.Task=Sub-task 1,Sub-task 2,Sub-task 3
+
 # Custom fields for Bug ticket types
 Query.summarytag=[EX-CR-ITD-Query]
 custom.Query.labels=EX-CR-ITD3
